--- a/conf/_configuration.yaml
+++ b/conf/_configuration.yaml
@@ -2,4 +2,4 @@ homeassistant:
   packages:
     ugreen_nas:
       # rest:            !include conf/ugreen_nas_rest.yaml
-      text_input:        !include conf/ugreen_nas_text_input.yaml
+      input_text:        !include conf/ugreen_nas_input_text.yaml
