--- a/docker/ugreen_api_token/docker-compose.yaml
+++ b/docker/ugreen_api_token/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   token-api:
     build: .
-    container_name: token-api
+    container_name: ugreen-api-token
     ports:
       - "4115:4115"
     environment:
       API_SCHEME: "https"
-      API_HOST: "192.168.178.21"
+      API_HOST: "192.168.xxx.xx"
       API_PORT: "9443"
       API_VERIFY: "false"
     restart: unless-stopped
