--- a/custom_components/ugreen_nas/manifest.json
+++ b/custom_components/ugreen_nas/manifest.json
@@ -5,9 +5,9 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/Tom-Bom-badil/home-assistant_ugreen-nas",
-  "integration_type": "device"
+  "integration_type": "device",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/Tom-Bom-badil/home-assistant_ugreen-nas/issues",
   "requirements": [],
-  "version": "0.8.0",
+  "version": "0.8.0"
 }
