Update docker-build.yml after error by build action
Action raised error:
ERROR: invalid tag "ghcr.io/Tom-Bom-badil/ugreen-api-token:latest": repository name must be lowercase
Error: buildx failed with: ERROR: invalid tag "ghcr.io/Tom-Bom-badil/ugreen-api-token:latest": repository name must be lowercase

Changed to lower case; not sure if it is case sensitive, though _(try-and-error)_.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,4 +33,5 @@ jobs:
           context: ./docker/ugreen_api_token
           file: ./docker/ugreen_api_token/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/ugreen-api-token:latest
+          # tags: ghcr.io/${{ github.repository_owner }}/ugreen-api-token:latest
+          tags: ghcr.io/tom-bom-badil/ugreen-api-token:latest
