added missing 'domain' and 'name' keys

--- a/custom_components/ugreen_nas/manifest.json
+++ b/custom_components/ugreen_nas/manifest.json
@@ -1,4 +1,6 @@
 {
+  "domain": "ugreen_nas",
+  "name": "UGREEN NAS",
   "codeowners": ["@Tom-Bom-badil", "@dobby5"],
   "config_flow": true,
   "dependencies": [],
