--- a/docker/ugreen_api_token/Dockerfile
+++ b/docker/ugreen_api_token/Dockerfile
@@ -1,30 +1,17 @@
-FROM python:3.11-slim
+FROM python:3.13-slim-bookworm
 
-RUN apt-get update && apt-get install -y \
-    curl \
-    wget \
-    gnupg \
-    ca-certificates \
-    fonts-liberation \
-    libnss3 \
-    libatk-bridge2.0-0 \
-    libxss1 \
-    libasound2 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxrandr2 \
-    libgbm-dev \
-    libgtk-3-0 \
-    libdrm2 \
-    --no-install-recommends && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl wget gnupg ca-certificates fonts-liberation \
+    libnss3 libatk-bridge2.0-0 libxss1 libasound2 \
+    libxcomposite1 libxdamage1 libxrandr2 libgbm-dev \
+    libgtk-3-0 libdrm2 && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-RUN playwright install --with-deps
+RUN pip install --no-cache-dir -r requirements.txt \
+    && playwright install --with-deps
 
 COPY . .
 
