Polishing and bug fixing Preparation for brand icon

--- a/custom_components/ugreen_nas/manifest.json
+++ b/custom_components/ugreen_nas/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "ugreen_nas",
+  "domain": "ugreen",
   "name": "UGREEN NAS",
   "codeowners": ["@Tom-Bom-badil", "@dobby5"],
   "config_flow": true,
