Add Application Integration Fix usb slots entities Restructuring the folders

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -30,8 +33,8 @@ jobs:
       - name: Build and push Docker image to GHCR
         uses: docker/build-push-action@v5
         with:
-          context: ./docker/ugreen_api_token
-          file: ./docker/ugreen_api_token/Dockerfile
+          context: ./addons
+          file: ./addons/Dockerfile
           push: true
-          # tags: ghcr.io/${{ github.repository_owner }}/ugreen-api-token:latest
           tags: ghcr.io/tom-bom-badil/ugreen-api-token:latest
+          platforms: linux/amd64,linux/arm64
