--- a/.github/workflows/hassfest.yml
+++ b/.github/workflows/hassfest.yml
@@ -1,4 +1,4 @@
-name: HACS Validation
+name: Hassfest Validation
 
 on:
   pull_request:
@@ -7,15 +7,13 @@ on:
       - main
 
 jobs:
-  hacs:
-    name: HACS Validation
+  validate:
+    name: Run Hassfest
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run HACS Validation
-        uses: hacs/action@main
-        with:
-          category: integration
+      - name: Run Hassfest
+        uses: home-assistant/actions/hassfest@master
