Fix literal of port

--- a/addons/config.json
+++ b/addons/config.json
@@ -19,13 +19,13 @@
   "options": {
     "UGREEN_NAS_API_SCHEME": "https",
     "UGREEN_NAS_API_IP": "",
-    "UGREEN_NAS_API_PORT": 9443,
+    "UGREEN_NAS_API_PORT": "9443",
     "UGREEN_NAS_API_VERIFY_SSL": "false"
   },
   "schema": {
     "UGREEN_NAS_API_SCHEME": "str",
     "UGREEN_NAS_API_IP": "str",
-    "UGREEN_NAS_API_PORT": "int",
+    "UGREEN_NAS_API_PORT": "str",
     "UGREEN_NAS_API_VERIFY_SSL": "str"
   }
 }
