Improved docker setup

--- a/addons/Dockerfile
+++ b/addons/Dockerfile
@@ -17,4 +17,7 @@ COPY . .
 
 EXPOSE 4115
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "4115"]
+COPY run.sh /run.sh
+RUN chmod a+x /run.sh
+
+CMD [ "/run.sh" ]
