--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,3 +1,15 @@
+name: Build and Push to GHCR
+
+on:
+  push:
+    branches:
+      - main
+      - develop
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,16 +32,17 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set image tag
-        id: vars
         run: |
-          if [ "${GITHUB_REF##*/}" = "main" ]; then
+          if [[ "${GITHUB_REF}" == refs/heads/main ]]; then
             echo "IMAGE_TAG=latest" >> $GITHUB_ENV
-          else
+          elif [[ "${GITHUB_REF}" == refs/heads/develop ]]; then
             SHORT_SHA=$(git rev-parse --short HEAD)
             echo "IMAGE_TAG=develop-$SHORT_SHA" >> $GITHUB_ENV
+          elif [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            echo "IMAGE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
           fi
 
-      - name: Build and push Docker image to GHCR
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./addons
