--- a/addons/docker-compose.yaml
+++ b/addons/docker-compose.yaml
@@ -1,13 +1,12 @@
+version: "3.8"
 services:
-  token-api:
-    image: ghcr.io/tom-bom-badil/ugreen-api-token:latest
-    container_name: ugreen-api-token
-    ports:
-      - "4115:4115"
+  ugreen-api-token:
+    build: .
+    container_name: ugreen_api_token
     environment:
       UGREEN_NAS_API_SCHEME: "https"
-      UGREEN_NAS_API_PORT: "9443"
+      UGREEN_NAS_API_PORT: "9999"
       UGREEN_NAS_API_VERIFY_SSL: "false"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    ports:
+      - "4115:4115"
     restart: unless-stopped
