--- a/custom_components/ugreen/manifest.json
+++ b/custom_components/ugreen/manifest.json
@@ -9,5 +9,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/Tom-Bom-badil/home-assistant_ugreen-nas/issues",
   "requirements": [],
-  "version": "2025.08-1"
+  "version": "v2025.08-1"
 }
